src/test/custom/invalid/preCompileSyntaxErr/invalidInclude1.wacc
binclude List<int>

begin
  skip
end